# Expression-Oriented-Language-Compiler

./: README.md  arch.ml  dune  optimize.ml  parser.mly  patina.ml  scanner.mll  test.pt
_build/: .db  .digest-db  log
_build/default/: ast.ml  ast.pp.ml  back_end.cmxa  back_end.ml-gen  error.pp.ml  front_end.cmxa  front_end.ml-gen  optimize.ml  optimize.pp.ml  parser.ml  parser.mli  parser.pp.ml  parser.pp.mli  scanner.ml  scanner.pp.ml  typecheck.ml  typecheck.pp.ml
_build/default/.back_end.objs/: back_end__Optimize.impl.all-deps  optimize.pp.ml.d  typecheck.pp.ml.d
_build/default/.back_end.objs/byte/: back_end.cmi  back_end.cmo  back_end.cmt  back_end__Optimize.cmi  back_end__Optimize.cmo  back_end__Optimize.cmt  back_end__Typecheck.cmi  back_end__Typecheck.cmo  back_end__Typecheck.cmt
_build/default/.back_end.objs/native/: back_end.cmx  back_end__Optimize.cmx  back_end__Typecheck.cmx
_build/default/.dune/: configurator  configurator.v2
_build/default/.front_end.objs/: ast.pp.ml.d  error.pp.ml.d  front_end__Error.impl.all-deps  front_end__Parser.impl.all-deps  front_end__Scanner.impl.all-deps  parser.pp.ml.d  scanner.pp.ml.d
_build/default/.front_end.objs/byte/: front_end.cmi  front_end.cmo  front_end.cmt  front_end__Ast.cmi  front_end__Ast.cmo  front_end__Ast.cmt  front_end__Error.cmi  (+7 more)
_build/default/.merlin-conf/: exe-patina  lib-back_end  lib-front_end
newtests/: test0.pt
tests/: asm.pt  basic.pt  basic.s  basicfull.pt  test0.pt  test0.s  test12.s  test12notes.s  test16.s  test19.pt  test19.s  test8.pt  test8.s  test9.pt  test9.s
(+12 files in other folders)
